sdk/mbt/picogkffi/picogk_ffi.h

typedef struct PKTriangle { int32_t A, B, C; } PKTriangle;
typedef struct PKVector3  { float X, Y, Z; } PKVector3;
typedef struct PKBBox3   { PKVector3 vecMin, vecMax; } PKBBox3;
typedef struct PKColorFloat { float R, G, B, A; } PKColorFloat;
typedef PKHANDLE PKINSTANCE, PKMESH, PKLATTICE, PKPOLYLINE, PKVOXELS;
// Library
extern void Library_GetName(char psz[PKINFOSTRINGLEN]);
extern void Library_GetVersion(char psz[PKINFOSTRINGLEN]);
extern void Library_GetBuildInfo(char psz[PKINFOSTRINGLEN]);
extern PKINSTANCE Library_hCreateInstance(float fVoxelSizeMM);
extern void Library_DestroyInstance(PKINSTANCE hThis);
extern int64_t Library_nTotalMemUsage(PKINSTANCE hThis);
extern int64_t Library_nMeshesAllocated(PKINSTANCE);
extern int64_t Library_nLatticesAllocated(PKINSTANCE);
extern int64_t Library_nVoxelsAllocated(PKINSTANCE);
extern void Library_VoxelsToMm(PKINSTANCE, const PKVector3*, PKVector3*);
extern void Library_MmToVoxels(PKINSTANCE, const PKVector3*, PKVector3*);
// Mesh
extern PKMESH Mesh_hCreate(PKINSTANCE);
extern PKMESH Mesh_hCreateFromVoxels(PKINSTANCE, PKVOXELS);
extern bool Mesh_bIsValid(PKINSTANCE, PKMESH);
extern void Mesh_Destroy(PKINSTANCE, PKMESH);
extern int32_t Mesh_nAddVertex(PKINSTANCE, PKMESH, const PKVector3*);
extern int32_t Mesh_nVertexCount(PKINSTANCE, PKMESH);
extern void Mesh_GetVertex(PKINSTANCE, PKMESH, int32_t, PKVector3*);
extern int32_t Mesh_nAddTriangle(PKINSTANCE, PKMESH, const PKTriangle*);
extern int32_t Mesh_nTriangleCount(PKINSTANCE, PKMESH);
extern void Mesh_GetTriangle(PKINSTANCE, PKMESH, int32_t, PKTriangle*);
extern void Mesh_GetBoundingBox(PKINSTANCE, PKMESH, PKBBox3*);
// Lattice
extern PKLATTICE Lattice_hCreate(PKINSTANCE);
extern bool Lattice_bIsValid(PKINSTANCE, PKLATTICE);
extern void Lattice_Destroy(PKINSTANCE, PKLATTICE);
extern void Lattice_AddSphere(PKINSTANCE, PKLATTICE, const PKVector3*, float);
extern void Lattice_AddBeam(PKINSTANCE, PKLATTICE, const PKVector3*, const PKVector3*, float, float, bool);
// Voxels
extern PKVOXELS Voxels_hCreate(PKINSTANCE);
extern PKVOXELS Voxels_hCreateCopy(PKINSTANCE, PKVOXELS);
extern PKVOXELS Voxels_hCreateSphere(PKINSTANCE, const PKVector3*, float);
extern PKVOXELS Voxels_hCreateCapsule(PKINSTANCE, const PKVector3*, const PKVector3*, float, float);
extern bool Voxels_bIsValid(PKINSTANCE, PKVOXELS);
extern void Voxels_Destroy(PKINSTANCE, PKVOXELS);
extern bool Voxels_bDiagnose(PKINSTANCE, PKVOXELS, char psz[PKINFOSTRINGLEN]);
extern bool Voxels_bIsEmpty(PKINSTANCE, PKVOXELS);
extern int64_t Voxels_nMemUsage(PKINSTANCE, PKVOXELS);
extern float Voxels_fVoxelSize(PKINSTANCE, PKVOXELS);
extern void Voxels_BoolAdd(PKINSTANCE, PKVOXELS, PKVOXELS);
extern void Voxels_BoolSubtract(PKINSTANCE, PKVOXELS, PKVOXELS);
extern void Voxels_BoolIntersect(PKINSTANCE, PKVOXELS, PKVOXELS);
extern void Voxels_Offset(PKINSTANCE, PKVOXELS, float);
extern void Voxels_DoubleOffset(PKINSTANCE, PKVOXELS, float, float);
extern void Voxels_TripleOffset(PKINSTANCE, PKVOXELS, float);
extern void Voxels_RenderMesh(PKINSTANCE, PKVOXELS, PKMESH);
extern void Voxels_RenderLattice(PKINSTANCE, PKVOXELS, PKLATTICE);
extern void Voxels_ProjectZSlice(PKINSTANCE, PKVOXELS, float, float);
extern bool Voxels_bIsInside(PKINSTANCE, PKVOXELS, const PKVector3*);
extern bool Voxels_bIsEqual(PKINSTANCE, PKVOXELS, PKVOXELS);
extern float Voxels_fCalculateVolume(PKINSTANCE, PKVOXELS);
extern void Voxels_GetSurfaceNormal(PKINSTANCE, PKVOXELS, const PKVector3*, PKVector3*);
extern bool Voxels_bClosestPointOnSurface(PKINSTANCE, PKVOXELS, const PKVector3*, PKVector3*);
extern bool Voxels_bRayCastToSurface(PKINSTANCE, PKVOXELS, const PKVector3*, const PKVector3*, PKVector3*);
// PolyLine
extern PKPOLYLINE PolyLine_hCreate(PKINSTANCE, const PKColorFloat*);
extern void PolyLine_Destroy(PKINSTANCE, PKPOLYLINE);
extern int32_t PolyLine_nAddVertex(PKINSTANCE, PKPOLYLINE, const PKVector3*);
extern int32_t PolyLine_nVertexCount(PKINSTANCE, PKPOLYLINE);
// VdbFile
extern PKVDBFILE VdbFile_hCreate(PKINSTANCE);
extern PKVDBFILE VdbFile_hCreateFromFile(PKINSTANCE, const char*);
extern bool VdbFile_bIsValid(PKINSTANCE, PKVDBFILE);
extern void VdbFile_Destroy(PKINSTANCE, PKVDBFILE);
extern bool VdbFile_bSaveToFile(PKINSTANCE, PKVDBFILE, const char*);
extern PKVOXELS VdbFile_hGetVoxels(PKINSTANCE, PKVDBFILE, int32_t);
extern int32_t VdbFile_nAddVoxels(PKINSTANCE, PKVDBFILE, const char*, PKVOXELS);
extern int32_t VdbFile_nFieldCount(PKINSTANCE, PKVDBFILE);
extern void VdbFile_GetFieldName(PKINSTANCE, PKVDBFILE, int32_t, char psz[PKINFOSTRINGLEN]);
extern int32_t VdbFile_nFieldType(PKINSTANCE, PKVDBFILE, int32_t);