sdk/gos/picogkffi/picogkffi/src/lib.rs

// picogkffi: Gossamer Rust binding for the PicoGK native C library.
//
// This crate wraps the PicoGK C API (picogk_ffi.h) and exposes it
// to Gossamer via the gossamer-binding register_module! macro.
//
// Native objects (Voxels, Mesh, Lattice, etc.) are managed via
// i64 handles in a Registry. Structs like Vec3, BBox3, ColorFloat
// use #[derive(GosStruct)] to pass through the FFI boundary.

use gossamer_binding::{register_module, Registry, FromGos, ToGos, GosStruct};


// C API types
#[repr(C, packed)]
#[derive(Clone, Copy, Debug, Default)]
struct PKVector3 { x: f32, y: f32, z: f32 }

#[repr(C, packed)]
#[derive(Clone, Copy, Debug, Default)]
struct PKBBox3 { min: PKVector3, max: PKVector3 }

#[repr(C, packed)]
#[derive(Clone, Copy, Debug, Default)]
struct PKColorFloat { r: f32, g: f32, b: f32, a: f32 }

#[repr(C, packed)]
#[derive(Clone, Copy, Debug, Default)]
struct PKTriangle { a: i32, b: i32, c: i32 }

// C API declarations (from picogk_ffi.h)
use std::os::raw::c_char;

// Direct C API declarations — the build.rs handles linking.
unsafe extern "C" {
    fn Library_GetName(psz: *mut c_char);
    fn Library_GetVersion(psz: *mut c_char);
    fn Library_GetBuildInfo(psz: *mut c_char);
    fn Library_hCreateInstance(fVoxelSizeMM: f32) -> u64;
    fn Library_DestroyInstance(hThis: u64);
    fn Library_nTotalMemUsage(hThis: u64) -> i64;
    fn Library_nMeshesAllocated(hThis: u64) -> i64;
    fn Library_nVoxelsAllocated(hThis: u64) -> i64;
    fn Library_nLatticesAllocated(hThis: u64) -> i64;
    fn Library_MmToVoxels(hThis: u64, pIn: *const PKVector3, pOut: *mut PKVector3);
    fn Library_VoxelsToMm(hThis: u64, pIn: *const PKVector3, pOut: *mut PKVector3);

    fn Voxels_hCreate(hThis: u64) -> u64;
    fn Voxels_hCreateCopy(hThis: u64, hSrc: u64) -> u64;
    fn Voxels_hCreateSphere(hThis: u64, pCenter: *const PKVector3, fRadius: f32) -> u64;
    fn Voxels_hCreateCapsule(hThis: u64, pStart: *const PKVector3, pEnd: *const PKVector3, fRadius1: f32, fRadius2: f32) -> u64;
    fn Voxels_bIsValid(hThis: u64, hVoxels: u64) -> bool;
    fn Voxels_Destroy(hThis: u64, hVoxels: u64);
    fn Voxels_bDiagnose(hThis: u64, hVoxels: u64, psz: *mut c_char) -> bool;
    fn Voxels_bIsEmpty(hThis: u64, hVoxels: u64) -> bool;
    fn Voxels_nMemUsage(hThis: u64, hVoxels: u64) -> i64;
    fn Voxels_fVoxelSize(hThis: u64, hVoxels: u64) -> f32;
    fn Voxels_BoolAdd(hThis: u64, hVoxels: u64, hOther: u64);
    fn Voxels_BoolSubtract(hThis: u64, hVoxels: u64, hOther: u64);
    fn Voxels_BoolIntersect(hThis: u64, hVoxels: u64, hOther: u64);
    fn Voxels_Offset(hThis: u64, hVoxels: u64, fDistance: f32);
    fn Voxels_DoubleOffset(hThis: u64, hVoxels: u64, fOffset1: f32, fOffset2: f32);
    fn Voxels_TripleOffset(hThis: u64, hVoxels: u64, fDistance: f32);
    fn Voxels_RenderMesh(hThis: u64, hVoxels: u64, hMesh: u64);
    fn Voxels_RenderLattice(hThis: u64, hVoxels: u64, hLattice: u64);
    fn Voxels_ProjectZSlice(hThis: u64, hVoxels: u64, fStartZ: f32, fEndZ: f32);
    fn Voxels_bIsInside(hThis: u64, hVoxels: u64, pPoint: *const PKVector3) -> bool;
    fn Voxels_bIsEqual(hThis: u64, hA: u64, hB: u64) -> bool;
    fn Voxels_fCalculateVolume(hThis: u64, hVoxels: u64) -> f32;
    fn Voxels_GetSurfaceNormal(hThis: u64, hVoxels: u64, pPoint: *const PKVector3, pResult: *mut PKVector3);
    fn Voxels_bClosestPointOnSurface(hThis: u64, hVoxels: u64, pPoint: *const PKVector3, pResult: *mut PKVector3) -> bool;
    fn Voxels_bRayCastToSurface(hThis: u64, hVoxels: u64, pOrigin: *const PKVector3, pDir: *const PKVector3, pResult: *mut PKVector3) -> bool;

    fn Mesh_hCreate(hThis: u64) -> u64;
    fn Mesh_hCreateFromVoxels(hThis: u64, hVoxels: u64) -> u64;
    fn Mesh_bIsValid(hThis: u64, hMesh: u64) -> bool;
    fn Mesh_Destroy(hThis: u64, hMesh: u64);
    fn Mesh_nAddVertex(hThis: u64, hMesh: u64, pVertex: *const PKVector3) -> i32;
    fn Mesh_nVertexCount(hThis: u64, hMesh: u64) -> i32;
    fn Mesh_GetVertex(hThis: u64, hMesh: u64, nIndex: i32, pResult: *mut PKVector3);
    fn Mesh_nAddTriangle(hThis: u64, hMesh: u64, pTri: *const PKTriangle) -> i32;
    fn Mesh_nTriangleCount(hThis: u64, hMesh: u64) -> i32;
    fn Mesh_GetTriangle(hThis: u64, hMesh: u64, nIndex: i32, pResult: *mut PKTriangle);
    fn Mesh_GetBoundingBox(hThis: u64, hMesh: u64, pBBox: *mut PKBBox3);

    fn Lattice_hCreate(hThis: u64) -> u64;
    fn Lattice_bIsValid(hThis: u64, hLattice: u64) -> bool;
    fn Lattice_Destroy(hThis: u64, hLattice: u64);
    fn Lattice_AddSphere(hThis: u64, hLattice: u64, pCenter: *const PKVector3, fRadius: f32);
    fn Lattice_AddBeam(hThis: u64, hLattice: u64, pStart: *const PKVector3, pEnd: *const PKVector3, fRadius1: f32, fRadius2: f32, bRoundCap: bool);

    fn VdbFile_hCreate(hThis: u64) -> u64;
    fn VdbFile_hCreateFromFile(hThis: u64, pPath: *const c_char) -> u64;
    fn VdbFile_bIsValid(hThis: u64, hFile: u64) -> bool;
    fn VdbFile_Destroy(hThis: u64, hFile: u64);
    fn VdbFile_bSaveToFile(hThis: u64, hFile: u64, pPath: *const c_char) -> bool;
    fn VdbFile_nFieldCount(hThis: u64, hFile: u64) -> i32;
    fn VdbFile_nAddVoxels(hThis: u64, hFile: u64, pName: *const c_char, hVoxels: u64) -> i32;
    fn VdbFile_hGetVoxels(hThis: u64, hFile: u64, nIndex: i32) -> u64;
    fn VdbFile_GetFieldName(hThis: u64, hFile: u64, nIndex: i32, psz: *mut c_char);
    fn VdbFile_nFieldType(hThis: u64, hFile: u64, nIndex: i32) -> i32;

    fn PolyLine_hCreate(hThis: u64, pColor: *const PKColorFloat) -> u64;
    fn PolyLine_Destroy(hThis: u64, hPolyLine: u64);
    fn PolyLine_nAddVertex(hThis: u64, hPolyLine: u64, pVertex: *const PKVector3) -> i32;
    fn PolyLine_nVertexCount(hThis: u64, hPolyLine: u64) -> i32;
}

// Gossamer-facing structs
#[derive(GosStruct, Clone, Copy, Debug, Default)]
pub struct Vec3 { pub x: f64, pub y: f64, pub z: f64 }

#[derive(GosStruct, Clone, Copy, Debug, Default)]
pub struct BBox3 { pub min: Vec3, pub max: Vec3 }

#[derive(GosStruct, Clone, Copy, Debug, Default)]
pub struct ColorFloat { pub r: f64, pub g: f64, pub b: f64, pub a: f64 }

#[derive(GosStruct, Clone, Copy, Debug, Default)]
pub struct Triangle { pub a: i64, pub b: i64, pub c: i64 }

fn vec3_to_pk(v: Vec3) -> PKVector3 {
    PKVector3 { x: v.x as f32, y: v.y as f32, z: v.z as f32 }
}

fn pk_to_vec3(p: PKVector3) -> Vec3 {
    Vec3 { x: p.x as f64, y: p.y as f64, z: p.z as f64 }
}

fn pk_to_bbox(b: PKBBox3) -> BBox3 {
    BBox3 { min: pk_to_vec3(b.min), max: pk_to_vec3(b.max) }
}

fn color_to_pk(c: ColorFloat) -> PKColorFloat {
    PKColorFloat { r: c.r as f32, g: c.g as f32, b: c.b as f32, a: c.a as f32 }
}

// Handle registries for native objects
static INSTANCE: Registry<u64> = Registry::new();
static INSTANCE_HANDLE: std::sync::OnceLock<u64> = std::sync::OnceLock::new();
static VOXELS: Registry<u64> = Registry::new();
static MESHES: Registry<u64> = Registry::new();
static LATTICES: Registry<u64> = Registry::new();
static POLYLINES: Registry<u64> = Registry::new();
static VDB_FILES: Registry<u64> = Registry::new();
static SCALAR_FIELDS: Registry<u64> = Registry::new();
static VECTOR_FIELDS: Registry<u64> = Registry::new();
static METADATA: Registry<u64> = Registry::new();

const INFO_STRING_LEN: usize = 255;

register_module!(
    name: picogkffi,
    doc: "Gossamer FFI binding for the PicoGK native geometry kernel.",

    // === Library lifecycle ===

    fn init(voxel_size_mm: f64) -> Result<(), String> {
        let h = unsafe { Library_hCreateInstance(voxel_size_mm as f32) };
        if h == 0 {
            return Err("Library_hCreateInstance returned null".to_string());
        }
        INSTANCE.insert(h);
        let _ = INSTANCE_HANDLE.set(h);
        Ok(())
    }

    fn shutdown() -> () {
        if let Some(h) = INSTANCE_HANDLE.get() {
            unsafe { Library_DestroyInstance(*h) };
        }
    }

    fn version() -> String {
        let mut buf = [0i8; 255];
        unsafe { Library_GetVersion(buf.as_mut_ptr() as *mut c_char) };
        c_buf_to_string(&buf)
    }

    fn name() -> String {
        let mut buf = [0i8; 255];
        unsafe { Library_GetName(buf.as_mut_ptr() as *mut c_char) };
        c_buf_to_string(&buf)
    }

    fn build_info() -> String {
        let mut buf = [0i8; 255];
        unsafe { Library_GetBuildInfo(buf.as_mut_ptr() as *mut c_char) };
        c_buf_to_string(&buf)
    }

    fn total_memory_usage() -> i64 {
        let h = get_instance();
        unsafe { Library_nTotalMemUsage(h) }
    }

    fn meshes_allocated() -> i64 {
        unsafe { Library_nMeshesAllocated(get_instance()) }
    }

    fn voxels_allocated() -> i64 {
        unsafe { Library_nVoxelsAllocated(get_instance()) }
    }

    fn lattices_allocated() -> i64 {
        unsafe { Library_nLatticesAllocated(get_instance()) }
    }

    // === Primitives ===

    fn new_sphere(center: Vec3, radius: f64) -> Result<i64, String> {
        let c = vec3_to_pk(center);
        let h = unsafe { Voxels_hCreateSphere(get_instance(), &c, radius as f32) };
        if h == 0 { return Err("Voxels_hCreateSphere failed".into()); }
        Ok(VOXELS.insert(h))
    }

    fn new_box(min_x: f64, min_y: f64, min_z: f64, max_x: f64, max_y: f64, max_z: f64) -> Result<i64, String> {
        // PicoGK doesn't have a direct box creator in the C API.
        // We create a sphere and then... actually the Go SDK uses
        // a different approach. Let me check the Go SDK.
        // Actually, looking at the Go code, NewBox is not in the C API.
        // The Go SDK builds it from a mesh. For now, skip boxes.
        Err("new_box not yet implemented - requires mesh-based construction".into())
    }

    fn new_cylinder(x: f64, y: f64, z: f64, radius: f64, height: f64) -> Result<i64, String> {
        // PicoGK doesn't have a direct cylinder creator in the C API either.
        // The Go SDK creates it via a capsule-like approach or mesh.
        Err("new_cylinder not yet implemented".into())
    }

    fn new_capsule(start: Vec3, end: Vec3, radius1: f64, radius2: f64) -> Result<i64, String> {
        let s = vec3_to_pk(start);
        let e = vec3_to_pk(end);
        let h = unsafe { Voxels_hCreateCapsule(get_instance(), &s, &e, radius1 as f32, radius2 as f32) };
        if h == 0 { return Err("Voxels_hCreateCapsule failed".into()); }
        Ok(VOXELS.insert(h))
    }

    fn new_voxels() -> Result<i64, String> {
        let h = unsafe { Voxels_hCreate(get_instance()) };
        if h == 0 { return Err("Voxels_hCreate failed".into()); }
        Ok(VOXELS.insert(h))
    }

    // === Voxels operations ===

    fn voxels_copy(handle: i64) -> Result<i64, String> {
        let src = *VOXELS.get(handle).map_err(|e| e.to_string())?;
        let h = unsafe { Voxels_hCreateCopy(get_instance(), src) };
        if h == 0 { return Err("copy failed".into()); }
        Ok(VOXELS.insert(h))
    }

    fn voxels_bool_add(a: i64, b: i64) -> () {
        let ha = *VOXELS.get(a).unwrap();
        let hb = *VOXELS.get(b).unwrap();
        unsafe { Voxels_BoolAdd(get_instance(), ha, hb) };
    }

    fn voxels_bool_subtract(a: i64, b: i64) -> () {
        let ha = *VOXELS.get(a).unwrap();
        let hb = *VOXELS.get(b).unwrap();
        unsafe { Voxels_BoolSubtract(get_instance(), ha, hb) };
    }

    fn voxels_bool_intersect(a: i64, b: i64) -> () {
        let ha = *VOXELS.get(a).unwrap();
        let hb = *VOXELS.get(b).unwrap();
        unsafe { Voxels_BoolIntersect(get_instance(), ha, hb) };
    }

    fn voxels_offset(handle: i64, distance: f64) -> () {
        let h = *VOXELS.get(handle).unwrap();
        unsafe { Voxels_Offset(get_instance(), h, distance as f32) };
    }

    fn voxels_double_offset(handle: i64, offset1: f64, offset2: f64) -> () {
        let h = *VOXELS.get(handle).unwrap();
        unsafe { Voxels_DoubleOffset(get_instance(), h, offset1 as f32, offset2 as f32) };
    }
